--- a/gb/21/7/25/n13114473.md
+++ b/gb/21/7/25/n13114473.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zwrhjx328/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zwrhjx328/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zwrhjx328/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zwrhjx328/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zwrhjx328/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zwrhjx328/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共FC-31盗窃美国隐形战机 难匹敌F-35</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13114481-Shenyang_J-31_F60_at_the_2014_Zhuhai_Air_Show-600x400.jpg" />
-<h6>尽管中共FC-31跟F-35有明显的外部相似性，军事专家奥斯本认为，没有任何决定性的迹象或证据表明FC-31能够与 F-35 匹敌。图为沈阳飞机工业集团制造的FC-31，在2014年珠海航展上首次亮相。( wc/ wikimedia.org)
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13114474-000_Hkg10210041-600x400.jpg" />
+<h6>尽管中共FC-31跟F-35有明显的外部相似性，军事专家奥斯本认为，没有任何决定性的迹象或证据表明FC-31能够与 F-35 匹敌。图为2015 年 9 月 17 日，北京国际航空博览会上的J-31战斗机模型。(WANG ZHAO / AFP)
 </h6>
 <hr>
-	<p>【大纪元2021年07月26日讯】（香港大纪元记者叶霜综合报导）中共<ahref="https://github.com/zwrhjx328/djy/blob/master/gb/tag/%E7%9B%97%E7%AA%83%E7%BE%8E%E5%9B%BD.md#1">盗窃美国</a>F-35技术的一款隐形战斗机最近现身一艘模拟航母。专家指出，尽管外观相似，其内核性能恐怕无法与F-35匹敌。</p>
+	<p>【大纪元2021年07月26日讯】（香港大纪元记者叶霜综合报导）中共<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%9B%97%E7%AA%83%E7%BE%8E%E5%9B%BD.md#1">盗窃美国</a>F-35技术的一款隐形战斗机最近现身一艘模拟航母。专家指出，尽管外观相似，其内核性能恐怕无法与F-35匹敌。</p>
 <p>这款名为FC-31鹘鹰的多用途双引擎隐形战斗机是由中国航空工业集团公司（AVIC）的附属公司沈阳飞机工业集团制造的，在2014年珠海航展上首次亮相。</p>
 <p>有媒体将FC-31称为“歼-31”（J-31）。这个说法并不准确，因为只有中共军方出资并装备过的战斗机才有“歼-XX”的代号。FC-31是完全由沈阳飞机工业集团独立出资研制设计的，并未获得中共军方的拨款。</p>
 <p>北京花了数年时间开发这架第五代战斗机，试图跟美国F-35一争高下。专家们注意到，FC-31机身与F-35机身有着惊人相似之处。</p>
-<figure id="attachment_13114482" aria-describedby="caption-attachment-13114482" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13114482-000_8VD6Q4-e1627234737880.jpg"><img class="size-large wp-image-13114482" src="https://i.epochtimes.com/assets/uploads/2021/07/id13114482-000_8VD6Q4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13114482" class="wp-caption-text">2020年 11 月 17 日一架F-35 战斗机在荷兰皇家空军军事基地沃尔克尔空军基地训练。(ROB ENGELAAR / ANP / AFP)</figcaption></figure>
+<figure id="attachment_13114475" aria-describedby="caption-attachment-13114475" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/07/id13114475-000_1HB9M5-e1627234116459.jpg"><img class="size-large wp-image-13114475" src="https://i.epochtimes.com/assets/uploads/2021/07/id13114475-000_1HB9M5-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13114475" class="wp-caption-text">2019 年 6 月 7 日一架洛克希德马丁 F-35战斗机停在佩耶恩空军基地的停机坪上。(Fabrice COFFRINI / AFP)</figcaption></figure>
 <p>军事专家克里斯．奥斯本（Kris Osborn）2020年9月在《国家利益》撰文说，FC-31与F-35的明显相似性似乎并非偶然。2014年美中经济与安全审查，特别引用了 2010 年国防科学委员会的报告调查结果，该报告指出，中共网络间谍活动导致许多美国武器规格被盗，其中包括 F-35。</p>
 <p>2019年，中共官媒《环球时报》的一篇报导称，J-31 在 2019 年巴黎航展上展示了设计改进。报导照片揭示了 F-35 和 J-31 之间外貌相似性。</p>
 <p>在此之前，中共媒体自己就指出两架飞机之间的相似之处。早在 2013 年，中共官媒《人民日报》的一篇报导就特别引用中共FC-31 和美国 F-35 之间的设计相似性，写到“J-31 和 F-35 使用相同的 DSI入口（非边界层分离的车道超音速入口）。”该文指出，唯一主要区别是，美国拥有 F-35B 短距起飞和着陆变体，与 F-35 的单发动机推进配置相比，J-31 使用两个发动机。</p>
@@ -36,41 +36,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/12/23/n10928319.md#1">魔鬼在统治着我们的世界(27)：全球野心(下)</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/20/8/15/n12332658.md#1">为何美F-35战机“野兽模式”对敌方很致命</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/2/5/n12736224.md#1">【独家】国防密件揭秘中共“六代战机”</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/10/n13080442.md#1">“鹘鹰”外销改内用？ 中国战机出口低迷</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/23/n10928319.md#1">魔鬼在统治着我们的世界(27)：全球野心(下)</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/15/n12332658.md#1">为何美F-35战机“野兽模式”对敌方很致命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/2/5/n12736224.md#1">【独家】国防密件揭秘中共“六代战机”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/7/10/n13080442.md#1">“鹘鹰”外销改内用？ 中国战机出口低迷</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9782273.md#1" target="_blank">高天韵：锡盖特博物馆 唤醒罗马尼亚的记忆</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/13/n10561691.md#1" target="_blank">林辉：苏联20万“笑话犯”被关背后的荒谬</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/20/n13102389.md#1">【未解之谜】预言家凯西：我曾是亚特兰蒂斯人</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/12/n13083124.md#1">对于邪灵“附体” 东西方文化如何对待？</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/15/n13091973.md#1">【未解之谜】 另类转世 亡夫化鸟续前缘</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/12/n13083162.md#1">苏东坡一身忠直正气 自述多次与鬼神谈判</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/23/n13110980.md#1">【新闻看点】郑州多地塌方严重 农村伤亡不让报</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/24/n13112118.md#1">【十字路口】郑州隧道变坟场 中共十罪危害世界</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/24/n13111563.md#1">车评：新面孔 新设备 2021 Volkswagen Tiguan SEL</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/23/n13108645.md#1">视频：郑州京广隧道尸体被抬出 众人寻亲</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/23/n13110904.md#1">【远见快评】郑州惨剧不断 祸起书记一句话？</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/22/n13108495.md#1">钟原：南京疫情源头或隐藏大秘密</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/22/n13108292.md#1">刘德华拍片慰问河南灾民 竟遭网民逼问捐款没</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/22/n13107732.md#1">星光二班女星喜诞女娃 为宝宝取苏格兰名</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/22/n13108051.md#1">河南洪灾魔咒？成龙党庆高唱《怒吼吧黄河》</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/23/n13110984.md#1">吴宗宪接种第一剂疫苗 自曝隔天出现副作用</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/23/n13110829.md#1">《时代革命》团队宣布：影片版权已转到海外</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/10/n13080358.md#1">哈佛推荐的10大超级食物 好处不只是抗癌</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/22/n13108194.md#1">三高者易得肾脏病？营养师教你护肾饮食法</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/25/n13113232.md#1">被野熊纠缠7天 美国男子在屋顶写SOS获救</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/24/n13112330.md#1">高端疫苗安全和保护力未明 专家：施打或仍有2好处</a></li>
-<li><a href="https://github.com/zwrhjx328/djy/blob/master/gb/21/7/23/n13109007.md#1">高速弹射升空 美国少女玩游乐设施被海鸥撞到</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/8/n11641181.md#1">【医案】老天的考卷</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zwrhjx328/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zwrhjx328/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/25/n13114473.htm">中共FC-31盗窃美国隐形战机 难匹敌F-35</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/25/n13114473.htm">中共FC-31盗窃美国隐形战机 难匹敌F-35</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zwrhjx328/djy/blob/master/gb/21/7/25/n13114473.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zwrhjx328/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zwrhjx328/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zwrhjx328/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zwrhjx328/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwrhjx328/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/7/25/n13114473.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
